--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         pip install -e ".[dev]"
     - name: Lint with ruff
       run: |
-        ruff src tests
+        ruff check src tests
     - name: Check formatting with black
       run: |
         black --check src tests
