--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -76,6 +76,7 @@
             "args": [
                 "-m",
                 "ruff",
+                "check",
                 "src",
                 "tests"
             ],
