--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,12 +19,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e ".[dev]"
+    - name: Check formatting with black
+      run: |
+        black src tests
     - name: Lint with ruff
       run: |
         ruff check src tests
-    - name: Check formatting with black
-      run: |
-        black --check src tests
     - name: Check import sorting with isort
       run: |
         isort --check-only --profile black src tests
