--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,12 +9,6 @@ repos:
     -   id: check-toml
     -   id: debug-statements
 
--   repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: 'v0.0.262'
-    hooks:
-    -   id: ruff
-        args: [--fix, --exit-non-zero-on-fix]
-
 -   repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
@@ -26,6 +20,12 @@ repos:
     hooks:
     -   id: black
         args: [--line-length=100]
+
+# -   repo: https://github.com/charliermarsh/ruff-pre-commit
+#     rev: 'v0.0.262'
+#     hooks:
+#     -   id: ruff
+#         args: [--fix, --exit-non-zero-on-fix]
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.2.0
