--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,28 @@
 # Core dependencies
-pandas==2.0.0
-numpy==1.24.3
-nltk==3.8.1
-scikit-learn~=1.6.1
+pandas
+numpy
+nltk
+scikit-learn
 # gensim
-transformers==4.28.1
-matplotlib==3.7.1
-seaborn==0.12.2
-plotly==5.14.1
-networkx==3.1
-beautifulsoup4==4.12.2
-wordcloud~=1.9.4
+transformers
+matplotlib
+seaborn
+plotly
+networkx
+beautifulsoup4
+wordcloud
 sompy-package
+loguru
+tqdm
+dateparser
 
 # Development tools
 # Linting and formatting
 
 # Testing
-pytest==7.3.1
+pytest
 
 # Documentation
 
 # Build tools
-setuptools==67.7.2
-
-# Pre-commit hooks
-
-loguru~=0.7.3
-tqdm~=4.67.1
+setuptools
