--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,21 @@
 		"@radix-ui/react-accordion": "^1.2.10",
 		"@radix-ui/react-alert-dialog": "^1.1.13",
 		"@radix-ui/react-avatar": "^1.1.9",
+		"@radix-ui/react-checkbox": "^1.3.1",
 		"@radix-ui/react-dialog": "^1.1.13",
 		"@radix-ui/react-dropdown-menu": "^2.1.14",
 		"@radix-ui/react-label": "^2.1.6",
+		"@radix-ui/react-menubar": "^1.1.14",
+		"@radix-ui/react-popover": "^1.1.13",
+		"@radix-ui/react-progress": "^1.1.6",
+		"@radix-ui/react-radio-group": "^1.3.6",
+		"@radix-ui/react-scroll-area": "^1.2.8",
+		"@radix-ui/react-select": "^2.2.4",
 		"@radix-ui/react-separator": "^1.1.6",
+		"@radix-ui/react-slider": "^1.3.4",
 		"@radix-ui/react-slot": "^1.2.2",
+		"@radix-ui/react-switch": "^1.2.4",
+		"@radix-ui/react-tabs": "^1.1.11",
 		"@radix-ui/react-toast": "^1.2.13",
 		"@radix-ui/react-tooltip": "^1.2.6",
 		"bcrypt": "^5.1.1",
@@ -32,6 +42,7 @@
 		"drizzle-orm": "^0.43.1",
 		"firebase": "^11.7.1",
 		"gsap": "^3.13.0",
+		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.508.0",
 		"next": "15.3.2",
 		"next-themes": "^0.4.6",
@@ -51,6 +62,7 @@
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
 		"@types/bcrypt": "^5.0.2",
+		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^20",
 		"@types/pg": "^8.15.1",
 		"@types/react": "^19",
