--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,9 +42,9 @@
 		"drizzle-orm": "^0.43.1",
 		"firebase": "^11.7.1",
 		"gsap": "^3.13.0",
-		"jsonwebtoken": "^9.0.2",
+		"jose": "^6.0.11",
 		"lucide-react": "^0.508.0",
-		"next": "15.3.2",
+		"next": "15.4.0-canary.36",
 		"next-themes": "^0.4.6",
 		"pg": "^8.15.6",
 		"postgres": "^3.4.5",
@@ -62,7 +62,6 @@
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
 		"@types/bcrypt": "^5.0.2",
-		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^20",
 		"@types/pg": "^8.15.1",
 		"@types/react": "^19",
