--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
 		"@radix-ui/react-tabs": "^1.1.11",
 		"@radix-ui/react-toast": "^1.2.13",
 		"@radix-ui/react-tooltip": "^1.2.6",
+		"@supabase/supabase-js": "^2.49.4",
 		"bcrypt": "^5.1.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
