--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,9 +27,8 @@ repos:
 #     -   id: ruff
 #         args: [--fix, --exit-non-zero-on-fix]
 
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.2.0
-    hooks:
-    -   id: mypy
-        additional_dependencies: [types-requests]
-        args: [--ignore-missing-imports]
+# -   repo: https://github.com/pre-commit/mirrors-mypy
+#     rev: v1.2.0
+#     hooks:
+#     -   id: mypy
+#         args: [--ignore-missing-imports]
