--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,14 @@
 		"lint": "next lint",
 		"drizzle:gen": "drizzle-kit generate",
 		"drizzle:migrate": "drizzle-kit migrate",
-		"drizzle:push": "drizzle-kit push"
+		"drizzle:push": "drizzle-kit push",
+		"drizzle:pull": "drizzle-kit pull"
 	},
 	"dependencies": {
+		"@dnd-kit/core": "^6.3.1",
+		"@dnd-kit/modifiers": "^9.0.0",
+		"@dnd-kit/sortable": "^10.0.0",
+		"@dnd-kit/utilities": "^3.2.2",
 		"@hookform/resolvers": "^5.0.1",
 		"@radix-ui/react-accordion": "^1.2.10",
 		"@radix-ui/react-alert-dialog": "^1.1.13",
@@ -34,6 +39,7 @@
 		"@radix-ui/react-toast": "^1.2.13",
 		"@radix-ui/react-tooltip": "^1.2.6",
 		"@supabase/supabase-js": "^2.49.4",
+		"@tanstack/react-table": "^8.21.3",
 		"bcrypt": "^5.1.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
