--- a/frontend/package.json
+++ b/frontend/package.json
@@ -71,7 +71,8 @@
 		"tailwind-merge": "^3.2.0",
 		"vaul": "^1.1.2",
 		"zod": "^3.24.4",
-		"zustand": "^5.0.4"
+		"zustand": "^5.0.4",
+		"d3": "^7.8.5"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
@@ -85,6 +86,10 @@
 		"eslint-config-next": "15.3.2",
 		"tailwindcss": "^4",
 		"tw-animate-css": "^1.2.9",
-		"typescript": "^5"
+		"typescript": "^5",
+		"@types/d3": "^7.4.3",
+		"autoprefixer": "^10.0.1",
+		"postcss": "^8",
+		"tailwindcss-animate": "^1.0.7"
 	}
 }
